# slambook

./: .gitignore  .gitmodules  README.md
myslam/: CMakeLists.txt
myslam/include/myslam/: frame.h  g2o_types.h
myslam/src/: visual_odometry.cpp
myslam/test/: run_vo.cpp
project/0.4/: CMakeLists.txt
project/0.4/config/: default.yaml
project/0.4/include/myslam/: common_include.h  mappoint.h
project/0.4/src/: config.cpp  frame.cpp  visual_odometry.cpp
project/0.4/test/: CMakeLists.txt  run_vo.cpp
slambook1_dev/myslam/include/myslam/: camera.h  common_include.h  map.h  visual_odometry.h
slambook1_dev/myslam/src/: camera.cpp  g2o_types.cpp  map.cpp  mappoint.cpp
slambook1_dev/project/0.2/config/: default.yaml
slambook1_dev/project/0.2/src/: visual_odometry.cpp
slambook1_dev/project/0.2/test/: run_vo.cpp
slambook1_dev/useEigen/: eigenMatrix.cpp
slambook2_dev/NoNLinearOptimization/: CMakeLists.txt  g2oCurveFitting.cpp
slambook2_dev/VO_Direct/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
slambook2_dev/VO_Feature/: CMakeLists.txt  orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
slambook2_dev/bundle_adjustment/: CMakeLists.txt  common.cpp  final.ply
slambook2_dev/errorEvaluation/: CMakeLists.txt  trajectoryError.cpp
slambook2_dev/myslam/: CMakeLists.txt
slambook2_dev/myslam/config/: default.yaml
slambook2_dev/myslam/include/myslam/: dataset.h  frontend.h  visual_odometry.h
slambook2_dev/myslam/src/: backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  viewer.cpp  visual_odometry.cpp
slambook2_dev/plot_trajectory/: plotTrajectory.cpp
slambook2_dev/pose_graph/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  result_lie.g2o
slambook2_dev/useEigen/: eigenMatrix.cpp
slambook2_dev/useGeometry/: eigenGeometry.cpp
slambook2_dev/useOpenCV/: CMakeLists.txt
slambook2_dev/useOpenCV/imageBasics/: imageBasics.cpp  undistortImage.cpp
slambook2_dev/useOpenCV/rgbd/: CMakeLists.txt  joinMap.cpp
slambook2_dev/useSophus/: CMakeLists.txt  useSophus.cpp
slambook2_dev/visualizeUsePangolin/: visualizeGeometry.cpp
